fix hero padding on small screen and app width

--- a/src/Components/styles/about.css
+++ b/src/Components/styles/about.css
@@ -4,6 +4,8 @@
   overflow: hidden;
   align-content: center;
   opacity: 0.9;
+  max-width: 100%;
+  margin: 0 auto; /* Center the container */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -22,6 +24,7 @@
   padding-top: 2rem;
   height: 40vh;
   width: max-content;
+  max-width: 100vw;
   margin: 0;
   justify-content: left;
   border-top: 3px solid rgba(0, 0, 0, 0.293);
@@ -80,16 +83,19 @@
   font-weight: 400;
   font-size: 1.5rem;
   margin: 0;
+  @media (max-width: 700px) {
+    font-size: 0.75rem;
+  }
 }
 /* large heading and med text margin left need to match  */
 .lg-heading {
   font-size: 5rem;
-  margin: 0;
+  margin: auto;
   font-weight: 900;
   line-height: 80%;
   @media (max-width: 1482px) {
     font-size: 3rem;
-    line-height: 90%;
+    padding-block: 0.25rem;
   }
   @media (max-width: 700px) {
     font-size: 2rem;
@@ -100,16 +106,25 @@
   font-weight: 500;
   font-size: 1.5rem;
   margin: 0;
+  @media (max-width: 700px) {
+    font-size: 1rem;
+  }
 }
 .keyword-link {
   font-size: 1.5rem;
   font-style: italic;
   font-weight: 800;
+  @media (max-width: 700px) {
+    font-size: 1rem;
+  }
 }
 .subtle-heading {
   color: rgba(0, 0, 0, 0.261);
   padding: 0;
   margin-bottom: 0;
+  @media (max-width: 700px) {
+    font-size: 0.75rem;
+  }
 }
 .button-highlight {
   text-shadow: 0px 0px 1px var(--button-color);
