--- a/src/Components/styles/creation.css
+++ b/src/Components/styles/creation.css
@@ -10,6 +10,8 @@
   transform: translate(-50%, -50%);
   height: max-content;
   width: 70vw;
+  max-width: 90%;
+  margin: 0 auto; /* Center the container */
   height: 80vh;
   overflow-y: scroll;
   display: flex;
