--- a/src/Components/styles/header.css
+++ b/src/Components/styles/header.css
@@ -3,6 +3,8 @@
   background-color: rgba(255, 255, 255, 0.07);
   position: relative;
   top: 0;
+  max-width: 90%;
+  margin: 0 auto; /* Center the container */
   padding: 1rem 2rem;
   /* top-left | top-right | bottom-right | bottom-left */
   border-radius: var(--border-radius) var(--border-radius) 0 0;
